# Simulation-Equation-de-Diffusion

TD2/: CMakeLists.txt  Equation.cpp  Equation.h  GaussSeidel.h  IMesh.h  Main.cpp  MeshFactory.cpp  MeshFactory.h  NonUniformMesh.cpp  NonUniformMesh.h  Problem.cpp  Problem.h  Test_Main.cpp  UniformMesh.cpp  UniformMesh.h  Variable.h  item16.cpp  save.c
